# hackthon

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DEPLOY_TO_HF_SPACE.ps1  Deploy-HFSpace.ps1  FINAL_DEPLOYMENT_STEPS.md  HACKATHON_SUBMISSION.md  QUICK_FIX_REFERENCE.md  README.md  READ_THIS_FIRST.md  SUBMISSION_14_FIX_GUIDE.md  SUBMISSION_STATUS.md  SUBMIT_NOW.md  app.py  baseline_inference.py  deploy.ps1  deploy_hf_quick.py  deploy_hf_space.py  deploy_to_hf_space.bat  inference.py  openenv.yaml  preflight.py  pyproject.toml  requirements.txt
src/openenv_hackathon/: __init__.py  environment.py  models.py  tasks.py
