[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-world-ops-benchmark"
version = "0.1.0"
description = "OpenEnv benchmark for customer support operations tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "hackathon" }
]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.0",
  "pydantic==2.11.3",
  "openai==1.75.0",
  "pyyaml==6.0.2"
]

[project.scripts]
inference = "inference:main"
baseline-inference = "baseline_inference:main"
preflight = "preflight:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
